# VEMCODE

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  lsan.supp  sketch.cpp
.obsidian/: workspace.json
app/: VEMCODE  VirtualBench  settings.ini  test_visuals
app/sketches/AllSensorTest/: AllSensorTest.cpp
app/sketches/BigMotorSensor/: BigMotorSensor.cpp
app/sketches/BigTest/: BigTest.cpp
app/sketches/BigTest2/: BigTest2.cpp
app/sketches/ButtonPushArduino/: ButtonPushArduino.cpp  ButtonPushArduino.ino
app/sketches/InterruptTest/: InterruptTest.cpp
app/sketches/LamboLineFollow/: LamboLineFollow.cpp
app/sketches/LamboPickPlace/: LamboPickPlace.cpp
app/sketches/LamboWallFollow/: LamboWallFollow.cpp
app/sketches/MultiFileTest/: MultiFileTest.cpp  blinker.cpp  blinker.h
app/sketches/MultiSerialTest/: MultiSerialTest.cpp
app/sketches/NonBlockingBlink/: NonBlockingBlink.cpp
app/sketches/OnlineExamples/Metronome/: Metronome.cpp
app/sketches/OnlineExamples/SmartBin/: SmartBin.cpp
app/sketches/OutputTest/: OutputTest.cpp
app/sketches/PotTest/: PotTest.cpp
app/sketches/SerialEcho/: SerialEcho.cpp
app/sketches/ServoTest/: ServoTest.cpp
app/sketches/SoftwareSerialTest/: SoftwareSerialTest.cpp
app/sketches/TestAnalogInput/: TestAnalogInput.cpp
app/sketches/VariableWatch/: VariableWatch.cpp
app/sketches/arduino_blink/: _vb_temp.cpp  arduino_blink.ino
app/sketches/button_test/: button_test.cpp
app/sketches/examples/blink/: blink.cpp
app/sketches/projects/LamboPickPlace/: LamboPickPlace.cpp
app/sketches/projects/LamboWallFollow/: LamboWallFollow.cpp  LamboWallFollow.cpp.autosave  LamboWallFollow.timeline
app/sketches/projects/Space_Racer/: Space_Racer.cpp
app/sketches/projects/gameboy/: gameboy.cpp
app/sketches/tests/AVRCompatTest/: AVRCompatTest.cpp  AVRCompatTest.timeline
app/sketches/tests/AsmCompatTest/: AsmCompatTest.cpp  AsmCompatTest.timeline
app/sketches/tests/DhtTest/: DhtTest.cpp  DhtTest.timeline
app/sketches/tests/EEPROMTest/: EEPROMTest.cpp  EEPROMTest.timeline
app/sketches/tests/GPIOTest/: GPIOTest.cpp  GPIOTest.timeline
app/sketches/tests/HBridgeBareTest/: HBridgeBareTest.cpp  HBridgeBareTest.timeline
app/sketches/tests/ISRSideEffectTest/: ISRSideEffectTest.cpp  ISRSideEffectTest.timeline
app/sketches/tests/ISRVectorTest/: ISRVectorTest.cpp  ISRVectorTest.timeline
app/sketches/tests/InputTest/: InputTest.cpp  InputTest.timeline
app/sketches/tests/InterruptTest/: InterruptTest.cpp  InterruptTest.timeline
app/sketches/tests/KeypadTest/: KeypadTest.cpp  KeypadTest.cpp.vblayout  KeypadTest.timeline
app/sketches/tests/LCDTest/: LCDTest.cpp
app/sketches/tests/Max7219Test/: Max7219Test.cpp  Max7219Test.timeline
app/sketches/tests/OutputTest/: OutputTest.cpp  OutputTest.cpp.vblayout
app/sketches/tests/SPITest/: SPITest.cpp  SPITest.timeline
app/sketches/tests/SerialPlotterTest/: SerialPlotterTest.cpp  SerialPlotterTest.timeline
app/sketches/tests/ServoTest/: ServoTest.cpp
app/sketches/tests/SimRealism/: SimRealism.cpp
app/sketches/tests/SleepTest/: SleepTest.cpp  SleepTest.timeline
app/sketches/tests/SoftwareSerialTest/: SoftwareSerialTest.cpp  SoftwareSerialTest.timeline
app/sketches/tests/StaticAnalysisTest/: StaticAnalysisTest.cpp
app/sketches/tests/StringTest/: StringTest.cpp  StringTest.timeline
app/sketches/tests/TimerTest/: TimerTest.cpp  TimerTest.timeline
app/sketches/tests/ToneTest/: ToneTest.cpp  ToneTest.timeline
app/sketches/tests/UtilityTest/: UtilityTest.cpp  UtilityTest.timeline
app/sketches/tests/VariableWatch/: VariableWatch.cpp
app/sketches/tests/WatchdogTest/: WatchdogTest.cpp  WatchdogTest.timeline
app/sketches/tests/WdtIsrSleepTest/: WdtIsrSleepTest.cpp  WdtIsrSleepTest.timeline
app/sketches/tests/WhitespaceTest/: WhitespaceTest.cpp
app/sketches/tests/WireTest/: WireTest.cpp  WireTest.timeline
app/sketches/tests/teststring/: teststring.cpp
app/sketches/teststring/: teststring.cpp
docs/: ADDING_COMPONENTS.md  API_REFERENCE.md  ARCHITECTURE.md  BUGFIXES_PENDING.md  ROADMAP.md  SKETCH_GUIDE.md  resources.qrc
notes/: notes.md
scripts/: clean.sh  run.sh  run_tests.sh
sketches/arduino_blink/: _vb_temp.cpp  arduino_blink.cpp
sketches/blink/: blink.cpp
sketches/button_test/: button_test.cpp
src/: appsettings.h  lsan_suppressions.cpp  main.cpp
src/components/: analog_sensor.cpp  button.cpp  buzzer.cpp  color_sensor.cpp  dht.cpp  distance_sensor.cpp  distancesensor.cpp  generic_input.cpp  generic_output.cpp  hbridge_motor.cpp  ir_sensor.cpp  joystick.cpp  keypad.cpp  lcd.cpp  led.cpp  max7219.cpp  potentiometer.cpp  rgb_led.cpp  rotary_encoder.cpp  servo.cpp  seven_segment.cpp  stepper.cpp  switch.cpp
src/core/circuit/: circuitdetector.cpp  circuitdetector.h  componentitem.cpp  componentitem.h  componentregistry.cpp  componentregistry.h
src/core/host/: sketchhost.cpp  sketchhost.h  sketchhostthread.cpp  sketchhostthread.h  timeline.cpp  timeline.h
src/core/runtime/: arduinoapi.h  arduinoruntime.cpp  arduinoruntime.h  boardprofile.h
src/ui/: apptheme.cpp  apptheme.h  canvaswidget.cpp  canvaswidget.h  codehighlighter.cpp  codehighlighter.h  devicespanel.cpp  linenumberarea.cpp  linenumberarea.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  signaltimeline.cpp  signaltimeline.h  spipanel.cpp  spipanel.h  variablewatch.cpp  variablewatch.h
src/ui/editor/: codehighlighter.cpp  codehighlighter.h  findreplacebar.cpp  findreplacebar.h  keybindmanager.cpp  keybindmanager.h  linenumberarea.cpp  linenumberarea.h  sketchlinter.cpp  sketchlinter.h
src/ui/panels/: byteparsing.h  devicespanel.cpp  devicespanel.h  serialplotter.cpp  serialplotter.h  signaltimeline.cpp  signaltimeline.h  spipanel.cpp  variablewatch.cpp  variablewatch.h
testfiles/: host.cpp  test_detector.cpp  test_visuals.cpp  testmain.cpp  virtual_arduino.h
